force-app/main/default/objects/Program_Task_Assignment__c/Program_Task_Assignment__c.object-meta.xml
<CustomObject>
    <label>Program Task Assignment</label>
    <nameField>
        <displayFormat>PTA-{0000}</displayFormat>
        <label>Program Task Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Task Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>