force-app/main/default/objects/Program_Task_Assignment__c/fields/Due_Day__c.field-meta.xml
<CustomField>
    <fullName>Due_Day__c</fullName>
    <label>Due Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>