force-app/main/default/objects/Program_Task_Assignment__c/fields/Time_Needed__c.field-meta.xml
<CustomField>
    <fullName>Time_Needed__c</fullName>
    <formula>TEXT( FLOOR( Training_Task__r.Expected_Duration_In_Minutes__c / 60) ) &amp; &quot;H &quot; &amp; TEXT(MOD( Training_Task__r.Expected_Duration_In_Minutes__c ,60)) &amp; &quot;M&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Needed</label>
    <type>Text</type>
</CustomField>