force-app/main/default/objects/Program_Task_Assignment__c/fields/Training_Program__c.field-meta.xml
<CustomField>
    <fullName>Training_Program__c</fullName>
    <label>Training Program</label>
    <referenceTo>Training_Program__c</referenceTo>
    <relationshipLabel>Associated Tasks</relationshipLabel>
    <relationshipName>Program_Task_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>