force-app/main/default/objects/Program_Task_Assignment__c/recordTypes/Program_Task_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Program_Task_Assignment</fullName>
    <active>true</active>
    <label>Program Task Assignment</label>
</RecordType>