force-app/main/default/objects/Program_Task_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Training_Task__c</columns>
    <columns>Training_Program__c</columns>
    <columns>Due_Day__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>